--- a/assets/theme/dark.qss
+++ b/assets/theme/dark.qss
@@ -240,25 +240,26 @@ QTabWidget QTabBar {                                      /* Tab bar style */
 }
 
 QTabWidget QTabBar::tab {                                  /* Individual tab style */
-    height                      : 22px;
+    height                      : 20px;
     width                       : 140px;
-    color                       : white;
+    color                       : gray;
     background                  : transparent;
     border-radius               : 4px;
     border                      : none;
-    padding                     : 2px 4px 2px 4px;
-    margin                      : 4px 12px 0px 0px;
+    padding                     : 2px;
+    margin                      : 4px 4px 0px 0px;
+    text-align                  : left;
 }
 
 QTabBar::tab:hover, QTabBar::tab:selected {                         /* Style for the selected tab */
-    background                  : transparent;
-    border-bottom               : 2px solid #ffcb00;
-    border-bottom-left-radius   : 0px;
-    border-bottom-right-radius  : 0px;
+    background                  : #393e41;
+    color                       : white;
+
 }
 
 QTabBar::close-button { /* Close button style */
-    subcontrol-position         : left;
+    subcontrol-position         : right;
+    margin-right                : 2px;
 }
 
 /*
