--- a/assets/theme/light.qss
+++ b/assets/theme/light.qss
@@ -51,11 +51,11 @@ QGroupBox::title {
 /*
 ------------------------------------------------------------------------------------------------------------------------
  -- General Widget customization
-    The following section customizes the appearance of several general widgets including QStackedWidget,
+    The following section customizes the appearance of several general reusable including QStackedWidget,
     QLabel, QFrame, QGraphicsView, and QStatusBar.
 */
 
-QStackedWidget {    /* Default appearance of stacked widgets */
+QStackedWidget {    /* Default appearance of stacked reusable */
     background                  : transparent;
     border                      : none;
     border-radius               : 4px;
@@ -72,7 +72,7 @@ QFrame {
     border                      : none;
 }
 
-QGraphicsView {                 /* Default appearance of graphics view widgets */
+QGraphicsView {                 /* Default appearance of graphics view reusable */
     background                  : white;
     border-radius               : 4px;
     margin                      : 0px 4px 4px 0px;
@@ -152,7 +152,7 @@ QSpinBox::down-button {
     menu bar background, items, hover effects, and selected states.
 */
 
-QMenuBar {          /* Default appearance of all widgets */
+QMenuBar {          /* Default appearance of all reusable */
     color                      : black;
     background: qlineargradient(
         x1: 0, y1: 0,
