--- a/rsrc.qrc
+++ b/rsrc.qrc
@@ -7,6 +7,7 @@
 
   <qresource prefix="/fonts">
     <!-- Fonts -->
+    <file alias="Bitcount-Regular.ttf">assets/fonts/Bitcount/static/Bitcount-Regular.ttf</file>
     <file alias="FiraCode-Regular.ttf">assets/fonts/Fira_Code/static/FiraCode-Regular.ttf</file>
     <file alias="FiraCode-Bold.ttf">assets/fonts/Fira_Code/static/FiraCode-Bold.ttf</file>
     <file alias="MarckScript-Regular.ttf">assets/fonts/Marck/MarckScript-Regular.ttf</file>
