--- a/assets/theme/dark.qss
+++ b/assets/theme/dark.qss
@@ -646,6 +646,7 @@ QLineEdit {
     color                       : white;
     border-radius               : 4px;
     height                      : 24px;
+    padding-left                : 4px;
 }
 
 /*
