--- a/assets/theme/dark.qss
+++ b/assets/theme/dark.qss
@@ -45,15 +45,18 @@ QTitleBar {
 
 QGroupBox {
     background                  : transparent;
-    border-radius               : 8px;
-    margin                      : 4px;
+    border-radius               : 4px;
+    border                      : 1px solid #363e41;
+    margin                      : 8px 24px 4px 24px;
+    padding-top                 : 12px;
 }
 
 QGroupBox::title {
     subcontrol-origin           : margin;
     subcontrol-position         : top center;
-    margin                      : 8px 0px 8px 0px;
-    color                       : white;
+    margin                      : 2px 4px;
+    padding                     : 0px 4px;
+    color                       : gray;
 }
 
 /*
@@ -311,7 +314,7 @@ QToolBar QToolButton:checked {
 
 QToolBar::separator {
     width                       : 2px;
-    margin                      : 2px;
+    margin                      : 2px 8px 2px 8px;
     background                  : #3e3e3e;
     border-radius               : 2px;
 }
@@ -695,4 +698,38 @@ QListWidget::item, QListView::item {
 QListWidget::item:selected, QListView::item:selected {
     color                       : lightgray;
     background                  : #4a556d;
+}
+
+/*
+------------------------------------------------------------------------------------------------------------------------
+ -- ToolBox customization
+*/
+
+QToolBox {
+    background                  : transparent;
+    border                      : none;
+    color                       : gray;
+}
+
+QToolBox::tab {
+    background                  : transparent;
+    color                       : lightgray;
+    border                      : none;
+    margin                      : 0px;
+    height                      : 24px;
+}
+
+QToolBox::tab:selected {
+    background                  : transparent;
+    color                       : white;
+    font-weight                 : bold;
+}
+
+QToolBox::tab:hover:!selected {
+    color                       : #efefef;
+}
+
+QToolBox > QScrollArea > QWidget > QWidget {
+    padding                     : 0px;
+    margin                      : 0px;
 }
