--- a/assets/theme/dark.qss
+++ b/assets/theme/dark.qss
@@ -2,6 +2,14 @@
     background                  : #232a2e;
 }
 
+QToolTip {
+    background                  : #363e41;
+    color                       : white;
+    border                      : none;
+    border-radius               : 4px;
+    padding                     : 4px;
+}
+
 QOpenGLWidget {
     background                  : black;
     border                      : none;
@@ -318,18 +326,6 @@ QToolBar QToolButton {
     color                       : white;
 }
 
-QToolBar QToolButton:hover {
-    background                  : #4a556d;
-}
-
-QToolBar QToolButton:pressed {
-    background                  : #4A556D;
-}
-
-QToolBar QToolButton:checked {
-    background                  : lightslategray;
-}
-
 QToolBar::separator {
     width                       : 2px;
     margin                      : 2px 8px 2px 8px;
@@ -458,7 +454,7 @@ QTreeWidget::item {
     background                  : transparent;
     margin                      : 0px;
     padding                     : 4px;
-    color                       : lightgray;
+    color                       : gray;
     height                      : 20px;
     border                      : none;
 }
@@ -467,18 +463,13 @@ QTreeWidget::item:has-children {
     color                       : white;
 }
 
+QTreeWidget::item:hover {
+    background                  : #363e41;
+}
+
 QTreeWidget::item:selected {
-    background                  : gray;
-}
-
-QTreeWidget::item:selected:first, QTreeWidget::item:hover:first {
-    border-top-left-radius       : 4px;
-    border-bottom-left-radius    : 4px;
-}
-
-QTreeWidget::item:selected:last, QTreeWidget::item:hover:last {
-    border-top-right-radius      : 4px;
-    border-bottom-right-radius   : 4px;
+    font-weight                 : bold;
+    background                  : #363e41;
 }
 
 QTreeWidget::branch, QTreeWidget::branch:selected {
